<resources>
    <string name="app_name">ReportsApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selected_language">Selected Language</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="forget_password">Forget Password</string>
    <string name="id">id</string>
    <string name="success">Success</string>
    <string name="response_body_is_null_or_malformed">Response body is null or malformed.</string>
    <string name="open_close_notification">Turn on/off notifications</string>
    <string name="dark_light">Dark/light mode</string>
    <string name="contact_support">Contact support</string>
    <string name="about_the_app">About the app</string>
    <string name="backup_settings">Backup settings</string>
    <string name="restore_the_original">Restore the original version</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="file_download_success">File downloaded successfully!</string>
    <string name="error_stream">Error: Unable to open output stream</string>
    <string name="error_media_stream">Error: Failed to insert file into MediaStore</string>
    <string name="failed_to_fetch_file">Failed to fetch the file. Response code:</string>
    <string name="no_data_avaible">No data available</string>
    <string name="change_password">Change Password</string>
    <string name="login_with_finger_print">Login With Finger Print</string>
    <string name="use_your_fingerprint_to_login_your_account">Use Your Fingerprint to login</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_continue">Continue</string>
    <string name="login_to_continue">Login To Continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="register_to_continue">Register To Continue</string>
    <string name="deleted">Data deleted successfully</string>
    <string name="update">Data updated successfully</string>
    <string name="notification_turn_off">Notifications are turned off</string>
    <string name="notification_turn_on">Notifications are turned on</string>
    <string name="application_support">Application support</string>
    <string name="i_need_help">I need help with...</string>
    <string name="no_mail">No email app available</string>
    <string name="user_name">User Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="share_rep">Share</string>
    <string name="history_rep">History</string>
    <string name="status">Status</string>
    <string name="settings">Setting</string>
    <string name="profile">Profile</string>
    <string name="log_out">Logout</string>
    <string name="ok">OK</string>
    <string name="backup_success">Backup was successfully performed to:</string>
<string name="backup_failed">Backup failed:</string>
    <string name="this_app">"This app was developed by [adel aiad].\nVersion: 1.0"</string>
    <string name="setting_restore_success">Settings restored successfully</string>
    <string name="settings_restore_faield">Failed to restore settings:</string>
    <string name="no_backup">No backup to backup</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_success">Login Success</string>
    <string name="cancel">Cancel</string>
    <string name="no_internet">No Internet</string>
    <string name="retry">RETRY</string>
    <string name="fill_all_fields">Please fill in all fields.</string>
    <string name="error_file">Error To Get File</string>
    <string name="field">Field</string>
    <string name="empty_data">Empty Data</string>
    <string name="attention">Attention ⚠ ⚠</string>
    <string name="we_will">✔✔ We Will Send Your Order After Three Days\\n+Please Contact +2011111111111..adel.aiad74@gmail.com\\n+to Complete Payment</string>
    <string name="whatsApp">WhatsApp</string>
    <string name="you_cant">You cant Make more than one order After Three Days Remaining Time:%02d:%02d:%02d</string>
    <string name="time_over">Time is Over</string>
    <string name="the_button">The button has been hidden for 3 days.</string>
    <string name="send_success">Send succefull</string>
    <string name="unknown_file">Unknown File</string>
    <string name="reports_app...">Reports App...\\n+ Fill All Fields To Send Your Order</string>
    <string name="report_name">Report Name</string>
    <string name="report_type">Report Type</string>
    <string name="report_address">Report ADDRESS</string>
    <string name="report_details">Report Details</string>
    <string name="report_attach_file">Report Attach File</string>
    <string name="report_page_number">Report Page Number</string>
    <string name="report_time">Report Time</string>
    <string name="report_date">Report Date</string>
    <string name="report_status">Report Status</string>
    <string name="download_file">Download File</string>
    <string name="last_used">Last Used</string>
    <string name="delete">Delete</string>
    <string name="update_btn">Update</string>
    <string name="fingerprint_verification_failed">Fingerprint verification failed</string>
    <string name="the_device_does_not_support_fingerprint">The device does not support fingerprint</string>
    <string name="fingerprint_is_currently_unavailable">Fingerprint is currently unavailable</string>
    <string name="please_register_fingerprint_in_device_settings">Please register fingerprint in device settings</string>
    <string name="send">Send</string>
</resources>