<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

        <group android:id="@+id/it1"
            android:checkableBehavior="single">

            <item android:id="@+id/nav_home"
                android:title="Send"
                android:icon="@drawable/baseline_add_24"/>
            <item android:id="@+id/nav_profile"
                android:title="@string/profile"
                android:icon="@drawable/ic_profile_24"/>
            <item android:id="@+id/nav_setting"
                android:title="@string/settings"
                android:icon="@drawable/ic_settings_24"/>
        </group>

        <item android:id="@+id/nav_share"
            android:title="@string/share_rep"
            android:icon="@drawable/ic_share_24"/>

        <item android:id="@+id/nav_logout"
            android:title="@string/log_out"
            android:icon="@drawable/ic_logout_24"/>
</menu>